Update back button style, adjust default states of collapsibles

--- a/Index.html
+++ b/Index.html
@@ -400,14 +400,15 @@
 
     .icon-btn {
       background: transparent;
-      color: var(--muted);
+      color: var(--accent);
       border: none;
       padding: 0;
       margin-top: 0;
-      width: 28px;
-      height: 28px;
+      width: 36px;
+      height: 36px;
       border-radius: 0;
-      font-size: 18px;
+      font-size: 22px;
+      font-weight: 800;
       line-height: 1;
       cursor: pointer
     }
@@ -778,7 +779,7 @@
         </div>
       </details>
 
-      <details class="collapsible card" open>
+      <details class="collapsible card">
         <summary>
           <span class="summary-title">Payment Explorer <span class="muted">•</span> <span id="paidMonthLabel"
               class="muted">Loading...</span></span>
@@ -795,7 +796,7 @@
         </div>
       </details>
 
-      <details class="collapsible card" open>
+      <details class="collapsible card">
         <summary>
           <span class="summary-text">
             <span class="summary-title">Volunteer contribution <span class="muted">•</span> <span id="volMonthLabel"
